fix overflow

--- a/phoneCss/index.css
+++ b/phoneCss/index.css
@@ -1,5 +1,6 @@
 body {
   padding-bottom: 10px;
+  overflow-y: hidden;
 }
 
 .navCircle {
